--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>946063364931-mf45cskfiqtc63namugb7n5usvgm8vkq.apps.googleusercontent.com</string>
+	<string>1020835525565-q49n490rnoir4ujga2mddj2t1lkijdjs.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.946063364931-mf45cskfiqtc63namugb7n5usvgm8vkq</string>
+	<string>com.googleusercontent.apps.1020835525565-q49n490rnoir4ujga2mddj2t1lkijdjs</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>946063364931-on7ef7qpcps70n63fvv34krka4hsvsun.apps.googleusercontent.com</string>
+	<string>1020835525565-r9lbitmuu25fa6uoh77qipr4488k9rou.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDv8lz2mfppOZhU4AH9F2pWx3Os6IcoACg</string>
+	<string>AIzaSyBY-VzydZbmILNpdHKfkDmFQG0B9nsVMZM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>946063364931</string>
+	<string>1020835525565</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.yourappname</string>
+	<string>com.jamia.deenulqayyim</string>
 	<key>PROJECT_ID</key>
-	<string>yourappname-9aca3</string>
+	<string>deenulqayyim-394d2</string>
 	<key>STORAGE_BUCKET</key>
-	<string>yourappname-9aca3.appspot.com</string>
+	<string>deenulqayyim-394d2.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:946063364931:ios:7b130569ab62d92257d5f6</string>
+	<string>1:1020835525565:ios:1e5a16ec272183569c58d4</string>
 </dict>
 </plist>
